--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@ layout: compress
 <!DOCTYPE html>
 <html>
 {% include head.html %}
+
 <body id="homepage">
 
   <div class="block-left">
@@ -24,12 +25,12 @@ layout: compress
   </div>
 
   <div class="block-right">
-    <a href="{{ site.url }}/posts" title="posts" class="posts-menu-icon"></a>
+    <!-- <a href="{{ site.url }}/posts" title="posts" class="posts-menu-icon"></a>
     <span class="posts-link">POSTS</span>
     <a title="project" class="projects-menu-icon">
       <span></span>
     </a>
-    <span class="projects-link">PROJECTS</span>
+    <span class="projects-link">PROJECTS</span> -->
     <div class="content">
       <div class="about-info">
         {{ content }}
@@ -40,4 +41,5 @@ layout: compress
   {% include scripts.html %}
   <script src="{{ site.url }}/assets/js/canvas.js"></script>
 </body>
+
 </html>
