--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,12 @@ layout: compress
         <h2>
           {{ site.description }}
         </h2>
-        {% include social-links.html %}
+        <ul>
+          <li><a class="social-btn" href="http://instagram.com/{{ site.instagram }}" target="_blank"
+              rel="noopener noreferrer"><i class="fa fa-fw fa-instagram"></i></a></li>
+          <li><a class="social-btn" href="http://facebook.com/{{ site.facebook }}" target="_blank"
+              rel="noopener noreferrer"><i class="fa fa-fw fa-facebook"></i></a></li>
+        </ul>
       </div>
     </div>
     <canvas></canvas>
